--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@iconscout/react-unicons": "^2.0.2",
     "@iconscout/unicons": "^4.0.8",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.377.0",
     "next": "14.2.3",
     "react": "^18",
