about page draft

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@iconscout/unicons": "^4.0.8",
     "clsx": "^2.1.1",
     "lucide-react": "^0.377.0",
-    "next": "14.2.3",
+    "next": "^14.2.14",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0"
